--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
         listen 8082 ssl http2;
         listen [::]:8082 ssl http2;
 
-        server_name $ENV{"SERVER_NAME"};
+        #server_name $ENV{"SERVER_NAME"};
 
         ssl_certificate /etc/nginx/fullchain.pem;
         ssl_certificate_key /etc/nginx/privkey.pem;
